test/typeAnnotation2.slq

def main(){
	x: !uint[2] x !ℕ := [1,2]; /// error
	y: !𝔹 × !ℕ := [1,2]; /// error
}
